Fix font rendering and scroll on Firefox mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -32,26 +32,35 @@ body {
     color: #ff0000;
     font-family: 'Poppins-extralight', sans-serif;
     min-height: 100vh;
+    overflow-y: auto;
 }
 
 @font-face {
   font-family: 'Nosifer';
   src: url('../font/Nosifer-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
     font-family: 'Poppins-extralight';
     src: url('../font/Poppins-ExtraLight.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
     font-family: 'Poppins-light';
     src: url('../font/Poppins-Light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
     font-family: 'Poppins-medium';
     src: url('../font/Poppins-Medium.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 
@@ -636,7 +645,8 @@ body.page-home .main-content {
     margin-top: 1.5rem;
 }
 
-.gallery-list-item {
+.gallery-list-item,
+.gallery-list-item:visited {
     color: #ff0000;
     text-decoration: none;
     font-family: 'Poppins-light', sans-serif;
